style: add fontawesome icons in the footer and fix: hero image size issue on small screen size

--- a/style.css
+++ b/style.css
@@ -101,6 +101,19 @@ hr {
 }
 .hero-image {
   max-width: 350px;
+  padding-top: 2rem;
+}
+
+@media (min-width: 576px) {
+  .hero-image {
+    max-width: 400px;
+  }
+}
+@media (max-width: 400px) {
+  .hero-image {
+    padding-top: 1rem;
+    max-width: 250px;
+  }
 }
 .hero-heading {
   font-size: 2.2rem;
